# agent

./: .gitignore  CLAUDE.md  README.md  TODO  config.py  config.yaml  litellm.yaml  main.py  mcp_servers.json  plan.md  pyproject.toml  r.py  test.py  test_integration.py  tool_categories.json  validate_async.py
core/: api.py  stream.py
docs/: contributing.md
docs/architecture/: architecture-detailed.md  memory.md  tools.md
docs/guide/: skills-and-tools.md
src/: config.py
src/agents/: __init__.py  agent.py  context.py  definitions.py  delegate.py  deps.py  guardrails.py  hooks.py  node.py  orchestrator.py  registry.py  runner.py  specialist_runner.py  specialists.py
src/app/: app.py  bootstrap.py  presets.py
src/core/: api.py  async_api.py  guardrails.py  performance.py
src/flows/: chat.py  planning.py
src/graph/: __init__.py  builder.py  engine.py  messages.py  nodes.py  types.py
src/guardrails/: __init__.py  input.py  output.py
src/interfaces/: __init__.py  base.py  cli.py
src/llm/: __init__.py  base.py  openai.py  structured.py  types.py
src/mcp/: __init__.py  config.py  manager.py  provider.py
src/memory/: __init__.py  base.py  buffer.py  decay.py  embeddings.py  extractor.py  memory.py  memory_extractor.py  (+5 more)
tests/: conftest.py  performance_test.py  test_app.py  test_async_api.py  test_async_tools.py  test_config.py  test_decay.py  test_file.py  test_mcp_manager.py  test_memory_types.py  test_tools.py  test_tools_refactor.py  test_vector_memory_extended.py  test_versioning_strategies.py
tools/: __init__.py  calculator.py  weather.py
(+107 files in other folders)
